@@ -1,7 +1,9 @@
 Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul
 
 version 2.10.9:
-	* Stuff.
+	XMPP:
+	* Fix problems logging into some servers including jabber.org and
+	  chat.facebook.com.
 
 version 2.10.8 (1/28/2014):
 	General:
